# calculator_pkg_jkc

./: LICENSE.txt  pyproject.toml  requirements_dev.txt  tox.ini
.github/workflows/: tests.yml
file_calculator/: file_calculator.py
scripts/: run.py
tests/: test_file_calculator.py
